Fix: update the items spacing to be consistent

--- a/frontend/app/landing.module.css
+++ b/frontend/app/landing.module.css
@@ -635,8 +635,8 @@
 }
 
 .item4 {
-  top: 10%;
-  right: 5%;
+  top: 3%;
+  left: 77%;
 }
 
 .stepBadge {
